Closed Bug 1654764 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::net::DocumentChannel::GetContentType]

Categories

(Core :: DOM: Networking, defect)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 + fixed
firefox81 --- fixed

People

(Reporter: sg, Assigned: u480271)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-178b428e-270e-4817-b76c-0dfe10200722.

Top 10 frames of crashing thread:

0 xul.dll mozilla::net::DocumentChannel::GetContentType netwerk/ipc/DocumentChannel.cpp:356
1 xul.dll nsPluginStreamListenerPeer::OnStartRequest dom/plugins/base/nsPluginStreamListenerPeer.cpp:160
2 xul.dll nsObjectLoadingContent::OnStartRequest dom/base/nsObjectLoadingContent.cpp:950
3 xul.dll mozilla::net::DocumentChannel::ShutdownListeners netwerk/ipc/DocumentChannel.cpp:94
4 xul.dll mozilla::net::DocumentChannelChild::Cancel netwerk/ipc/DocumentChannelChild.cpp:364
5 xul.dll mozilla::net::nsLoadGroup::Cancel netwerk/base/nsLoadGroup.cpp:230
6 xul.dll nsDocLoader::Stop uriloader/base/nsDocLoader.cpp:253
7 xul.dll nsDocShell::Stop docshell/base/nsDocShell.cpp:3980
8 xul.dll nsDocShell::Destroy docshell/base/nsDocShell.cpp:4177
9 xul.dll nsWebBrowser::SetDocShell toolkit/components/browser/nsWebBrowser.cpp:1131

Crashes with this signature started on Nightly build id 20200721094241.

Dan, might this be a regression from Bug 1646899?

Flags: needinfo?(dglastonbury)
Has Regression Range: --- → yes
Assignee: nobody → dglastonbury
Status: NEW → ASSIGNED

Looks like nsPluginStreamListenerPeer::OnStartRequest handles nsIChannel::GetContentType but DocumentChannel is being a bit opinionated about not implementing all of nsIChannel's interface.

Flags: needinfo?(dglastonbury)
Component: DOM: Core & HTML → DOM: Networking
Pushed by dglastonbury@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/018034204705 Reduce DocumentChannel::GetContentType() crash to error. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch

Please request beta uplift when you get a chance.

Flags: needinfo?(dglastonbury)

Comment on attachment 9166467 [details]
Bug 1654764: Reduce DocumentChannel::GetContentType() crash to error. r?mattwoodrow

Beta/Release Uplift Approval Request

  • User impact if declined: Tab could crash from a diagnostic assert if the user accesses a plugin
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This change reduces a MOZ_ASSERT used as a diagnostic to a warning with error, which the API already supports so the callers should be prepared for error.
  • String changes made/needed: None
Flags: needinfo?(dglastonbury)
Attachment #9166467 - Flags: approval-mozilla-beta?

Comment on attachment 9166467 [details]
Bug 1654764: Reduce DocumentChannel::GetContentType() crash to error. r?mattwoodrow

approved for 80.0b3

Attachment #9166467 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: