Bug 1654764: Reduce DocumentChannel::GetContentType() crash to error. r=mattwoodrow, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D85100